package com.oraclejavabot.features.users.dto;

public enum SkillCategory {
    BACKEND,
    FRONTEND,
    DEVOPS,
    DATABASE,
    QA,
    CLOUD,
    AI
}